--- a/veoc/templates/veoc/airline_list_complete.html
+++ b/veoc/templates/veoc/airline_list_complete.html
@@ -9,18 +9,18 @@
         			<div id="breadcrumb">
         				<ul class="breadcrumb">
         					 <li><i class="fa fa-home"></i><a href="{% url 'veoc:access_dashboard' %}"> Dashboard</a></li>
-        					 <li class="active">Completed Airport Quarantine Report</li>
+        					 <li class="active">Completed Airport Traveler Report</li>
         				</ul>
         			</div><!-- /breadcrumb-->
 
-              <div class="panel-heading"><b>COVID19 Airport Quarantine Released Cases Report</b></div>
+              <div class="panel-heading"><b>COVID19 Airport Released Traveler Report</b></div>
 
         			<div class="padding-md">
         				<div class="row">
         					<div class="col-md-12">
         						<div class="panel panel-default table-responsive">
         							<div class="panel-heading">
-        								Airport Released Quarantine Report
+        								Airport Released Traveler Report
         								<span class="label label-info pull-right" id="totalspan">{{traveller_details_count}} Registrations </span>
         							</div>
         							<div class="padding-md clearfix">
