--- a/veoc/templates/veoc/airport_list_incomplete.html
+++ b/veoc/templates/veoc/airport_list_incomplete.html
@@ -9,11 +9,11 @@
         			<div id="breadcrumb">
         				<ul class="breadcrumb">
         					 <li><i class="fa fa-home"></i><a href="{% url 'veoc:access_dashboard' %}"> Dashboard</a></li>
-        					 <li class="active">Completed Airport Quarantine Report</li>
+        					 <li class="active">Incomplete Profile Airport Traveler Report</li>
         				</ul>
         			</div><!-- /breadcrumb-->
 
-              <div class="panel-heading"><b>COVID19 Airport Quarantine Complete Cases Report</b></div>
+              <div class="panel-heading"><b>COVID19 Airport Traveler Incomplete Profile Report</b></div>
               <!-- Edit Quarantine modal -->
               <div class="modal fade" id="edit_quarantine_modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
                 aria-hidden="true">
@@ -96,7 +96,7 @@
         					<div class="col-md-12">
         						<div class="panel panel-default table-responsive">
         							<div class="panel-heading">
-        								Self Registered Airport Quarantine Report
+        								Incomplete Profile Airport Traveler Report
         								<span class="label label-info pull-right" id="totalspan">{{traveller_details_count}} Registrations </span>
         							</div>
         							<div class="padding-md clearfix">
