--- a/airport_app/templates/airport_app/airport_follow_up.html
+++ b/airport_app/templates/airport_app/airport_follow_up.html
@@ -9,18 +9,18 @@
         <div id="breadcrumb">
             <ul class="breadcrumb">
                 <li><i class="fa fa-home"></i><a href="{% url 'veoc:access_dashboard' %}"> Dashboard</a></li>
-                <li class="active">Airport Quarantine Follow Up</li>
+                <li class="active">Airport Follow Up Report</li>
             </ul>
         </div><!-- /breadcrumb-->
 
-        <div class="panel-heading"><b>COVID19 Airport Quarantine Follow Up Report</b></div>
+        <div class="panel-heading"><b>COVID19 Airport Follow Up Report</b></div>
 
         <div class="padding-md">
             <div class="row">
                 <div class="col-md-12">
                     <div class="panel panel-default table-responsive">
                         <div class="panel-heading">
-                            Airport Quarantine Follow Up Report
+                            Airport Follow Up Report
                             <span class="label label-info pull-right" id="totalspan">{{ follow_data_count }} Reported cases </span>
                         </div>
                         <div class="padding-md clearfix">
