--- a/veoc/templates/veoc/airport_register.html
+++ b/veoc/templates/veoc/airport_register.html
@@ -5,7 +5,7 @@
         <div id="breadcrumb">
           <ul class="breadcrumb">
              <li><i class="fa fa-home"></i><a href="{% url 'veoc:access_dashboard' %}"> Dashboard</a></li>
-             <li class="active">Airport Quarantine Registartion Form</li>
+             <li class="active">Airport Traveler Registartion Form</li>
           </ul>
         </div><!-- /breadcrumb-->
 
