--- a/veoc/templates/veoc/truck_quarantine_contacts.html
+++ b/veoc/templates/veoc/truck_quarantine_contacts.html
@@ -1,11 +1,41 @@
   {% extends "veoc/main_template.html" %}
 
   {% block main %}
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12">
+  <div id="main-container">
+    <div id="breadcrumb">
+      <ul class="breadcrumb">
+         <li><i class="fa fa-home"></i><a href="{% url 'veoc:access_dashboard' %}"> Dashboard</a></li>
+         <li class="active">Completed Quarantine Report</li>
+      </ul>
+    </div><!-- /breadcrumb-->
 
-        <table id="albums" class="table table-striped table-bordered" style="width:100%">
+    <div class="panel-heading"><b>COVID19 Quarantine Complete Follow Up Report</b></div>
+    <div class="panel-body" align="left">
+        <form class="form-inline" method="post" action="{% url 'veoc:truck_quarantine_list' %}">{% csrf_token %}
+            <div class="form-group">
+              <label for="date_from">From :</label>
+              <input class="form-control" type="date" id="date_from" name="date_from" value="{{ day }}" required>
+            </div>
+              &nbsp; &nbsp;
+            <div class="form-group">
+              <label for="date_to">To :</label>
+              <input class="form-control" type="date" id="date_to" name="date_to" value="{{ day }}" required>
+            </div>
+            <button type="submit" class="btn btn-primary" >Update</button>
+          </form>
+        <!-- <button type="submit" class="btn btn-primary" align="right">Update</button> -->
+    </div>
+    <div class="padding-md">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="panel panel-default table-responsive">
+            <div class="panel-heading">
+              Completed Quarantine Report
+              <span class="label label-info pull-right" id="totalspan">{{all_data_count}} cases </span>
+            </div>
+            <div class="padding-md clearfix">
+
+        <table id="albums" class="display" style="width:100%">
           <thead>
             <tr>
               <th>Last Name</th>
@@ -31,34 +61,23 @@
   {% endblock %}
 
   {% block script %}
-  <script src="https://code.jquery.com/jquery-3.4.1.js" type="text/javascript"></script>
-     <script src="https://code.jquery.com/jquery-3.4.1.min.js" type="text/javascript"></script>
-      <script src="https://code.jquery.com/ui/jquery-ui-git.js" type="text/javascript"></script>
-     <link href="https://code.jquery.com/ui/jquery-ui-git.css" rel="Stylesheet" type="text/css" />
 
-  <script type="text/javascript"
-      src="https://cdn.datatables.net/v/dt/jqc-1.12.3/jszip-2.5.0/pdfmake-0.1.18/dt-1.10.12/b-1.2.2/b-flash-1.2.2/b-html5-1.2.2/b-print-1.2.2/datatables.min.js"></script>
+      <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+      <script type="text/javascript"
+          src="https://cdn.datatables.net/v/dt/jqc-1.12.3/jszip-2.5.0/pdfmake-0.1.18/dt-1.10.12/b-1.2.2/b-flash-1.2.2/b-html5-1.2.2/b-print-1.2.2/datatables.min.js"></script>
 
   <script>
       $(document).ready(function() {
           var table = $('#albums').DataTable({
             "order": [],
-            dom: 'Bfrtip',
-            responsive: true,
-            DisplayLength: 100,
-            scrollX: true,
-            lengthMenu: [[10, 25, 50, -1], [10, 25, 50, "All"]],
+            dom: 'Blfrtip',
+            lengthMenu: [
+            [ 10, 25, 50, -1 ],
+            [ '10 rows', '25 rows', '50 rows', 'Show all' ]
+            ],
             buttons: [
-            {
-                  extend: 'excelHtml5',
-                  exportOptions: {
-                   modifier : {
-                       order : 'index', // 'current', 'applied','index', 'original'
-                       page : 'all', // 'all', 'current'
-                       search : 'none' // 'none', 'applied', 'removed'
-                   },
-                   columns: [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
-                  }}],
+                'copy', 'csv', 'excel', 'pdf', 'print'
+            ],
               "serverSide": true,
               "ajax": "/api/truck_quarantine_contacts/?format=datatables",
               "columns": [
