--- a/veoc/templates/veoc/truck_quarantine_contacts.html
+++ b/veoc/templates/veoc/truck_quarantine_contacts.html
@@ -31,7 +31,7 @@
           <div class="panel panel-default table-responsive">
             <div class="panel-heading">
               Completed Quarantine Report
-              <span class="label label-info pull-right" id="totalspan">{{all_data_count}} cases </span>
+              <span class="label label-info pull-right" id="totalspan">{{ quarantine_data_count }}4036 cases </span>
             </div>
             <div class="padding-md clearfix">
 
@@ -58,11 +58,79 @@
       </div>
     </div>
   </div>
+  </div>
+  </div>
+
+  <!-- Map View modal -->
+  <div class="modal fade" id="mapViewModal" tabindex="-1" role="dialog" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLongTitle"><b>QUARANTINED CASE FOLLOW UP DETAILS</b></h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+              <div class="modal-body">
+                  <div class="padding-md">
+                      <div class="row">
+                          <div class="col-md-12">
+                              <div class="panel panel-default">
+                                  <div class="panel-heading"><b>Quarantined Case Details</b></div>
+                                  <div class="panel-body" align="center">
+                                      <form method="post" action="#">
+                                          <div class="form-group" style="display: none;">
+                                              <input class="form-control id" name="id" style="display: none;">
+                                          </div>
+                                          <div class="form-row">
+                                              <div class="form-group col-md-4">
+                                                  <label for="county">Names :</label>
+                                                  <input class="form-control first_name" name="first_name" readonly>
+                                              </div>
+                                              <div class="form-group col-md-4">
+                                                  <label for="county">Mobile No :</label>
+                                                  <input class="form-control phone_number" name="phone_number"
+                                                         readonly>
+                                              </div>
+                                              <div class="form-group col-md-4">
+                                                  <label for="county">Date last contacted :</label>
+                                                  <input class="form-control date_of_contact" name="date_of_contact"
+                                                         readonly>
+                                              </div>
+                                          </div>
+                                      </form>
+                                      <button type="submit" onClick="openMap()"
+                                              class="btn btn-success btn-sm pull-right">View Map
+                                      </button>
+                                  </div>
+                              </div><!-- /div panel-default -->
+                              <div class="panel panel-default">
+                                  <div class="panel-heading"><b>Patient Self Reporting Locations</b></div>
+                                  <div class="panel-body">
+                                      <div id="map_div">
+                                      </div><!-- div to hold map -->
+                                  </div><!-- panel-body -->
+                              </div><!-- /div panel-default -->
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+
+
+  </div>
   {% endblock %}
 
   {% block script %}
 
       <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+      <script src="https://code.jquery.com/jquery-3.4.1.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" type="text/javascript"></script>
+     <script src="https://code.jquery.com/ui/jquery-ui-git.js" type="text/javascript"></script>
+    <link href="https://code.jquery.com/ui/jquery-ui-git.css" rel="Stylesheet" type="text/css" />
+
       <script type="text/javascript"
           src="https://cdn.datatables.net/v/dt/jqc-1.12.3/jszip-2.5.0/pdfmake-0.1.18/dt-1.10.12/b-1.2.2/b-flash-1.2.2/b-html5-1.2.2/b-print-1.2.2/datatables.min.js"></script>
 
@@ -83,15 +151,15 @@
               "columns": [
                   {"data": "patient_contacts.last_name"},
                   {"data": "patient_contacts.first_name"},
-                  {"data": "patient_contacts.sex"},
+                  {"data": "patient_contacts.dob", "searchable": false},
                   {"data": "patient_contacts.sex"},
                   {"data": "patient_contacts.phone_number"},
                   {"data": "patient_contacts.passport_number"},
                   {"data": "patient_contacts.nationality"},
                   {"data": "patient_contacts.origin_country"},
                   {"data": "border_point.border_name"},
-                  {"data": "patient_contacts.first_name"},
-                  {"data": "patient_contacts.first_name"},
+                  {"data": "patient_contacts.date_of_contact", "searchable": false},
+                  {"data": "patient_contacts.created_by", "searchable": false},
                   {"data": "patient_contacts.truck_info", "searchable": false},
                   {"data": "patient_contacts.truck_prof", "searchable": false},
 
