--- a/veoc/templates/veoc/home_care_list.html
+++ b/veoc/templates/veoc/home_care_list.html
@@ -291,7 +291,11 @@
     $(document).ready(function () {
           $('#home_care_report').DataTable({
               "order": [],
-              dom: 'Bfrtip',
+              dom: 'Blfrtip',
+              lengthMenu: [
+              [ 10, 25, 50, -1 ],
+              [ '10 rows', '25 rows', '50 rows', 'Show all' ]
+              ],
               buttons: [
                   'copy', 'csv', 'excel', 'pdf', 'print'
               ]
@@ -366,7 +370,7 @@
     function openMap(){
       google.charts.load('current', {'packages': ['map']});
       google.charts.setOnLoadCallback(drawCountyChart);
-    }    
+    }
 
     function drawCountyChart() {
       // console.log("inside drawCountyChart");
