--- a/veoc/templates/veoc/home_care_symtomatic.html
+++ b/veoc/templates/veoc/home_care_symtomatic.html
@@ -164,7 +164,11 @@
     $(document).ready(function () {
           $('#events_report').DataTable({
               "order": [],
-              dom: 'Bfrtip',
+              dom: 'Blfrtip',
+              lengthMenu: [
+              [ 10, 25, 50, -1 ],
+              [ '10 rows', '25 rows', '50 rows', 'Show all' ]
+              ],
               buttons: [
                   'copy', 'csv', 'excel', 'pdf', 'print'
               ]
