--- a/veoc/templates/veoc/truck_quarantine_follow_up.html
+++ b/veoc/templates/veoc/truck_quarantine_follow_up.html
@@ -83,7 +83,7 @@
                               <b>{{ follow.difficulty_breathing }}</b></td>
                             {% else %}
                                 <td>{{ follow.difficulty_breathing }}</td>
-                            {% endif %}              
+                            {% endif %}
                             {% if follow.comment.strip %}
                               <td>{{ follow.comment }}</td>
                             {% else %}
@@ -130,7 +130,11 @@
     $(document).ready(function () {
           $('#events_report').DataTable({
               "order": [],
-              dom: 'Bfrtip',
+              dom: 'Blfrtip',
+              lengthMenu: [
+              [ 10, 25, 50, -1 ],
+              [ '10 rows', '25 rows', '50 rows', 'Show all' ]
+              ],
               buttons: [
                   'copy', 'csv', 'excel', 'pdf', 'print'
               ]
