--- a/veoc/templates/veoc/airline_travellers.html
+++ b/veoc/templates/veoc/airline_travellers.html
@@ -1,5 +1,6 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
 
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
@@ -9,9 +10,12 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/css/intlTelInput.css">
 
-<link rel="stylesheet" href="path/to/intlTelInput.css">
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/js/intlTelInput-jquery.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/js/intlTelInput.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/js/intlTelInput.min.js"></script>
 <script src="/static/js/qrcode.js" type="text/javascript"></script>
 <script src="/static/js/qrcode.min.js" type="text/javascript"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.min.js"></script>
@@ -128,8 +132,10 @@
                 </div> <!-- form-group end.// -->
                 <div class=" col form-group">
                     <label for="phone_number">Phone Number : <span style="color:red">*</span></label>
-                    <input class="form-control" type="tel" id="phone_number" name="phone_number" onchange="checkPhone()" minlength = "6" placeholder=" e.g 720000000" required/>
-                    <small class="form-text text-muted">This is only for notification purposes.</small>
+                    <input class="form-control" type="tel" id="phone_number" name="phone_number" onchange="checkPhone()" minlength = "6" required/>
+                    <span id="valid-msg" class="hide" style="color:green; display:none">Valid</span>
+                    <span id="error-msg" class="hide" style="color:red"></span>
+                    <small class="form-text text-muted">Select the correct country code first.</small>
                 </div> <!-- form-group end.// -->
                 <div class="col form-group">
                     <label>Email address</label>
@@ -216,7 +222,7 @@
                   </select>
                 </div> <!-- form-group end.// -->
                 <div class="col form-group">
-                    <label for="breathing_difficulty">Difficulty in breathing :* </label>
+                    <label for="breathing_difficulty">Difficulty in breathing : <span style="color:red">* </label>
                     <select class="form-control" id="breathing_difficulty" name="breathing_difficulty" required>
                         <option value="" disabled selected>Are you having difficulty breathing</option>
                         <option value="t">Yes</option>
@@ -348,15 +354,54 @@
        	<link href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/css/intlTelInput.css" rel="Stylesheet" type="text/css" />
        <script src="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/js/intlTelInput.js"></script>
        <script>
-         var input = document.querySelector("#phone_number");
-         window.intlTelInput(input, {
-           // any initialisation options go here
-           separateDialCode:true,
-           initialCountry: 'ke',
-         });
-//alert(formatDate(' '));
+         var input = document.querySelector("#phone_number"),
+         errorMsg = document.querySelector("#error-msg"),
+         validMsg = document.querySelector("#valid-msg");
+
+         // here, the index maps to the error code returned from getValidationError - see readme
+         var errorMap = ["Invalid number", "Invalid country code", "Too short", "Too long", "Invalid number"];
+
+         // initialise plugin
+        var iti = window.intlTelInput(input, {
+          separateDialCode:true,
+          initialCountry: 'ke',
+          utilsScript: "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.3/js/utils.js?1590403638580"
+        });
+         var reset = function() {
+           input.classList.remove("error");
+           errorMsg.innerHTML = "";
+           errorMsg.classList.add("hide");
+           validMsg.classList.add("hide");
+         };
+         // on blur: validate
+        input.addEventListener('blur', function() {
+          reset();
+          if (input.value.trim()) {
+            if (iti.isValidNumber()) {
+              validMsg.classList.remove("hide");
+              validMsg.style.display = "block";
+            } else {
+              validMsg.style.display = "none";
+              input.classList.add("error");
+              var errorCode = iti.getValidationError();
+              errorMsg.innerHTML = errorMap[errorCode];
+              errorMsg.classList.remove("hide");
+            }
+          }
+        });
+
+        // on keyup / change flag: reset
+        input.addEventListener('change', reset);
+        input.addEventListener('keyup', reset);
+
+        function checkPhone(){
+        var phone_n = document.getElementById("phone_number").value
+        console.log(phone_n);
+      }
 
     $(document).ready(function() {
+
+
 
       var monthNames = [ "January", "February", "March", "April", "May", "June",
     "July", "August", "September", "October", "November", "December" ];
@@ -410,6 +455,9 @@ function daysInMonth(dob_month, dob_year) {
     var maxdate = new Date(Date.now() + 7 * 24 * 60 * 60 * 1000);
     var newmaxdate = maxdate.getDate();
     console.log(newmaxdate);
+    var d = new Date(Date.now());
+    var n = d.getMonth();
+    console.log(n);
     for (i = currentdate; i < newmaxdate; i++){
         $('#days').append($('<option />').val(i).html(i));
     }
