--- a/veoc/templates/veoc/truck_quarantine_complete.html
+++ b/veoc/templates/veoc/truck_quarantine_complete.html
@@ -224,11 +224,7 @@
     $(document).ready(function () {
           $('#quarantine_complete_report').DataTable({
               "order": [],
-              dom: 'Blfrtip',
-              lengthMenu: [
-              [ 10, 25, 50, -1 ],
-              [ '10 rows', '25 rows', '50 rows', 'Show all' ]
-              ],
+              dom: 'Bfrtip',
               buttons: [
                   'copy', 'csv', 'excel', 'pdf', 'print'
               ]
