--- a/veoc/templates/veoc/truck_ongoing_complete.html
+++ b/veoc/templates/veoc/truck_ongoing_complete.html
@@ -55,7 +55,7 @@
                           </tr>
                           </thead>
                           <tbody>
-                          {% for q_data in all_data %}
+                          {% for q_data in page_obj %}
                           <tr>
                             <td>{{ q_data.last_name }}</td>
                             <td>{{ q_data.first_name }}</td>
@@ -76,6 +76,29 @@
                         {% endfor %}
                       </tbody>
     							</table>
+
+                  <div class="pagination">
+                <span class="step-links">
+                  {% if page_obj.has_previous %}
+                      <a href="?page=1">&laquo; first</a>
+                      <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                  {% endif %}
+
+                  <span class="current">
+                      Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                  </span>
+
+                  {% if page_obj.has_next %}
+                      <a href="?page={{ page_obj.next_page_number }}">next</a>
+                      <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                  {% endif %}
+                {#                                    <br>pages#}
+                {#                                    {% for i in page_range %}#}
+                {#                                        <a href="{{ i }}">{{ i }}</a>#}
+                {#                                    {% endfor %}#}
+                </span>
+                </div>
+
                 </div>
               </div>
     				</div>
@@ -92,10 +115,6 @@
               "order": [],
               "processing": true,
               dom: 'Blfrtip',
-              lengthMenu: [
-              [ 10, 25, 50, 100 ],
-              [ '10 rows', '25 rows', '50 rows', '100 rows' ]
-              ],
               buttons: [
                   'copy', 'csv', 'excel', 'pdf', 'print'
               ]
