--- a/veoc/templates/veoc/truck_quarantine_list.html
+++ b/veoc/templates/veoc/truck_quarantine_list.html
@@ -1,6 +1,10 @@
 {% extends "veoc/main_template.html" %}
 
 {% block main %}
+
+    <script type="text/javascript"
+            src="https://cdn.datatables.net/v/dt/jqc-1.12.3/jszip-2.5.0/pdfmake-0.1.18/dt-1.10.12/b-1.2.2/b-flash-1.2.2/b-html5-1.2.2/b-print-1.2.2/datatables.min.js"></script>
+
     <div id="main-container">
         <div id="breadcrumb">
             <ul class="breadcrumb">
@@ -13,20 +17,20 @@
         <div class="panel-body" align="left">
             <form class="form-inline" method="post" action="{% url 'veoc:truck_quarantine_list' %}">{% csrf_token %}
                 <div class="form-group">
-                    <label for="email"date_from>From :</label>
+                    <label for="email">From :</label>
                     <input class="form-control" type="date" id="date_from" name="date_from" value="{{ start_day }}"
                            required>
                 </div>
                 &nbsp; &nbsp;
                 <div class="form-group">
-                    <label for="date_to">To :</label>
+                    <label for="pwd">To :</label>
                     <input class="form-control" type="date" id="date_to" name="date_to" value="{{ end_day }}" required>
                 </div>
                 <button type="submit" class="btn btn-primary">Update</button>
             </form>
             <!-- <button type="submit" class="btn btn-primary" align="right">Update</button> -->
         </div>
-        <div class="panel-body" align="left" style="display:none">
+        <div class="panel-body" align="left">
             <form class="form-inline" method="post" action="{% url 'veoc:truck_quarantine_list' %}">{% csrf_token %}
                 <div class="form-group">
                     <label for="id_number">Search Passport/ID :</label>
@@ -67,7 +71,7 @@
                             <span class="label label-info pull-right" id="totalspan">{{ quarantine_data_count }} Reported cases </span>
                         </div>
                         <div class="padding-md clearfix">
-                            <table class="display" style="width:100%" id="quarantine_report">
+                            <table class="table table-hover" id="quarantine_report">
                                 <thead class="thead-dark">
                                 <tr>
                                     <th>Last Name</th>
@@ -85,7 +89,7 @@
                                     <th>View Profile</th>
                                 </tr>
                                 </thead>
-                                <!--<tbody>
+                                <tbody>
                                 {% for q_data in my_list_data %}
                                     {% if q_data.border_point.border_name != "None" %}
                                         <tr>
@@ -126,9 +130,9 @@
                                         </tr>
                                     {% endif %}
                                 {% endfor %}
-                                </tbody>-->
+                                </tbody>
                             </table>
-                            <!--<div class="pagination">
+                            <div class="pagination">
                                 <span class="step-links">
                                     {% if page_obj.has_previous %}
                                         <a href="?page=1">&laquo; first</a>
@@ -148,7 +152,7 @@
 {#                                        <a href="{{ i }}">{{ i }}</a>#}
 {#                                    {% endfor %}#}
                                 </span>
-                            </div>-->
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -414,45 +418,15 @@
 {% endblock %}
 
 {% block script %}
-<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.js" type="text/javascript"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js" type="text/javascript"></script>
-<script src="https://code.jquery.com/ui/jquery-ui-git.js" type="text/javascript"></script>
-<link href="https://code.jquery.com/ui/jquery-ui-git.css" rel="Stylesheet" type="text/css" />
-
-<script type="text/javascript"
-    src="https://cdn.datatables.net/v/dt/jqc-1.12.3/jszip-2.5.0/pdfmake-0.1.18/dt-1.10.12/b-1.2.2/b-flash-1.2.2/b-html5-1.2.2/b-print-1.2.2/datatables.min.js"></script>
-
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha/js/bootstrap.min.js"></script> -->
     <script>
         $(document).ready(function () {
             $('#quarantine_report').DataTable({
                 "order": [],
-                dom: 'Blfrtip',
-                lengthMenu: [
-                [ 10, 25, 50, 100 ],
-                [ '10 rows', '25 rows', '50 rows', '100 rows' ]
-                ],
+                dom: 'Bfrtip',
                 buttons: [
                     'copy', 'csv', 'excel', 'pdf', 'print'
-                ],
-                "serverSide": true,
-                "processing": true,
-                "ajax": "/api/truck_quarantine_contacts/?format=datatables",
-                "columns": [
-                    {"data": "patient_contacts.last_name"},
-                    {"data": "patient_contacts.first_name"},
-                    {"data": "patient_contacts.dob", "searchable": false},
-                    {"data": "patient_contacts.sex"},
-                    {"data": "patient_contacts.phone_number"},
-                    {"data": "patient_contacts.passport_number"},
-                    {"data": "patient_contacts.nationality"},
-                    {"data": "patient_contacts.origin_country"},
-                    {"data": "border_point.border_name"},
-                    {"data": "patient_contacts.date_of_contact", "searchable": false},
-                    {"data": "patient_contacts.created_by", "searchable": false},
-                    {"data": "patient_contacts.truck_info", "searchable": false},
-                    {"data": "patient_contacts.truck_prof", "searchable": false},
-
                 ]
             });
 
