Added report modules to the county and subcounty users

--- a/veoc/templates/veoc/main_template.html
+++ b/veoc/templates/veoc/main_template.html
@@ -364,6 +364,14 @@
                   <li><a href="/complete_home_care"><span class="fa-stack fa-lg pull-left"><i class="fa fa-handshake-o fa-stack-1x "></i></span>Completed Home Care</a></li>
               </ul>
           </li>
+          <li>
+              <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-credit-card fa-stack-1x"></i></span>TEMPLATE REPORTS</a>
+              <ul class="nav-pills nav-stacked" style="list-style-type:none;">
+                  <li><a href="/daily_reports">Daily report</a></li>
+                  <li><a href="/weekly_reports">Weekly report</a></li>
+                  <li><a href="/periodic_reports">Periodic report</a></li>
+              </ul>
+          </li>
 		  <li>
               <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-address-book fa-stack-1x "></i></span>EMERGENCY CONTACTS</a>
               <ul class="nav-pills nav-stacked" style="list-style-type:none;">
@@ -430,6 +438,14 @@
                   <li><a href="/home_care_follow_up"><span class="fa-stack fa-lg pull-left"><i class="fa fa fa-ambulance fa-stack-1x "></i></span>Home Care FollowUp</a></li>
                   <li><a href="/home_care_symtomatic"><span class="fa-stack fa-lg pull-left"><i class="fa fa-thermometer-quarter fa-stack-1x "></i></span>Symptomatic Cases</a></li>
                   <li><a href="/complete_home_care"><span class="fa-stack fa-lg pull-left"><i class="fa fa-handshake-o fa-stack-1x "></i></span>Completed Home Care</a></li>
+              </ul>
+          </li>
+          <li>
+              <a href="#"><span class="fa-stack fa-lg pull-left"><i class="fa fa-credit-card fa-stack-1x"></i></span>TEMPLATE REPORTS</a>
+              <ul class="nav-pills nav-stacked" style="list-style-type:none;">
+                  <li><a href="/daily_reports">Daily report</a></li>
+                  <li><a href="/weekly_reports">Weekly report</a></li>
+                  <li><a href="/periodic_reports">Periodic report</a></li>
               </ul>
           </li>
 		  <li>
