Changes to api link

--- a/veoc/templates/veoc/self_follow_up.html
+++ b/veoc/templates/veoc/self_follow_up.html
@@ -213,7 +213,8 @@
             });
         }else{
             var settings = {
-              "url": "http://ears-api.mhealthkenya.co.ke/api/search/client",
+              "url": "127.0.0.1/api/search/client",
+{#                "url": "http://ears-api.mhealthkenya.co.ke/api/search/client",#}
               "method": "POST",
               "timeout": 0,
               "headers": {
@@ -333,7 +334,8 @@
         }
 
         var settings = {
-          "url": "http://ears-api.mhealthkenya.co.ke/api/response",
+          "url": "127.0.0.1/api/response",
+{#            "url": "http://ears-api.mhealthkenya.co.ke/api/response",#}
           "method": "POST",
           "timeout": 0,
           "headers": {
