Another api link changes

--- a/veoc/templates/veoc/self_follow_up.html
+++ b/veoc/templates/veoc/self_follow_up.html
@@ -213,7 +213,7 @@
             });
         }else{
             var settings = {
-              "url": "127.0.0.1/api/search/client",
+              "url": "http://127.0.0.1/api/search/client",
 {#                "url": "http://ears-api.mhealthkenya.co.ke/api/search/client",#}
               "method": "POST",
               "timeout": 0,
@@ -334,7 +334,7 @@
         }
 
         var settings = {
-          "url": "127.0.0.1/api/response",
+          "url": "http://127.0.0.1/api/response",
 {#            "url": "http://ears-api.mhealthkenya.co.ke/api/response",#}
           "method": "POST",
           "timeout": 0,
