--- a/veoc/templates/veoc/self_follow_up.html
+++ b/veoc/templates/veoc/self_follow_up.html
@@ -213,8 +213,8 @@
             });
         }else{
             var settings = {
-              "url": "http://41.89.94.122/api/search/client",
-{#                "url": "http://ears-api.mhealthkenya.co.ke/api/search/client",#}
+{#              "url": "http://41.89.94.122/api/search/client",#}
+              "url": "https://crossorigin.me/http://ears-api.mhealthkenya.co.ke/api/search/client",
               "method": "POST",
               "timeout": 0,
               "headers": {
@@ -334,8 +334,8 @@
         }
 
         var settings = {
-          "url": "http://41.89.94.122/api/response",
-{#            "url": "http://ears-api.mhealthkenya.co.ke/api/response",#}
+{#          "url": "http://41.89.94.122/api/response",#}
+          "url": "https://crossorigin.me/http://ears-api.mhealthkenya.co.ke/api/response",
           "method": "POST",
           "timeout": 0,
           "headers": {
