self reg url CORS test

--- a/veoc/templates/veoc/self_follow_up.html
+++ b/veoc/templates/veoc/self_follow_up.html
@@ -214,7 +214,7 @@
         }else{
             var settings = {
 {#              "url": "http://41.89.94.122/api/search/client",#}
-              "url": "https://crossorigin.me/http://ears-api.mhealthkenya.co.ke/api/search/client",
+              "url": "//ears-api.mhealthkenya.co.ke/api/search/client",
               "method": "POST",
               "timeout": 0,
               "headers": {
@@ -335,7 +335,7 @@
 
         var settings = {
 {#          "url": "http://41.89.94.122/api/response",#}
-          "url": "https://crossorigin.me/http://ears-api.mhealthkenya.co.ke/api/response",
+          "url": "//ears-api.mhealthkenya.co.ke/api/response",
           "method": "POST",
           "timeout": 0,
           "headers": {
